# craft-docs-proxmox

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/craft_proxmox/: __init__.py  cli.py  config.py  craft_client.py  models.py  proxmox_client.py  sync.py
tests/: __init__.py  test_models.py
